// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Month picker Testing the component months with a picked month 1`] = `
<ul
  className="flex mt-auto w-full border border-yellow-600 mb-2 bg-white rounded"
>
  <li
    className="p-2 bg-green-dark text-light-white"
  >
    <a
      className="cursor-pointer"
      onClick={[Function]}
    >
      January 2019
    </a>
  </li>
  <li
    className="p-2 "
  >
    <a
      className="cursor-pointer"
      onClick={[Function]}
    >
      February 2019
    </a>
  </li>
  <li
    className="p-2 "
  >
    <a
      className="cursor-pointer"
      onClick={[Function]}
    >
      March 2019
    </a>
  </li>
  <li
    className="p-2 "
  >
    <a
      className="cursor-pointer"
      onClick={[Function]}
    >
      January 2020
    </a>
  </li>
</ul>
`;

exports[`Month picker Testing the component months without a picked month 1`] = `
<ul
  className="flex mt-auto w-full border border-yellow-600 mb-2 bg-white rounded"
>
  <li
    className="p-2 "
  >
    <a
      className="cursor-pointer"
      onClick={[Function]}
    >
      January 2019
    </a>
  </li>
  <li
    className="p-2 "
  >
    <a
      className="cursor-pointer"
      onClick={[Function]}
    >
      February 2019
    </a>
  </li>
  <li
    className="p-2 "
  >
    <a
      className="cursor-pointer"
      onClick={[Function]}
    >
      March 2019
    </a>
  </li>
  <li
    className="p-2 "
  >
    <a
      className="cursor-pointer"
      onClick={[Function]}
    >
      January 2020
    </a>
  </li>
</ul>
`;
